--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -127,8 +127,6 @@
     <ClCompile Include="log\Channel.cpp" />
     <ClCompile Include="log\ConsoleChannel.cpp" />
     <ClCompile Include="log\FileChannel.cpp" />
-    <ClCompile Include="log\Formatter.cpp" />
-    <ClCompile Include="log\LogChannel.cpp" />
     <ClCompile Include="log\LogFile.cpp" />
     <ClCompile Include="log\Logger.cpp" />
     <ClCompile Include="log\LoggingFactory.cpp" />
@@ -269,6 +267,7 @@
     <ClInclude Include="inc\AsciiCharacter.h" />
     <ClInclude Include="inc\AssocVector.h" />
     <ClInclude Include="inc\AutoPtr.h" />
+    <ClInclude Include="inc\AutoReleasePool.h" />
     <ClInclude Include="inc\BaseClass.h" />
     <ClInclude Include="inc\BaseProcess.h" />
     <ClInclude Include="inc\BitObjectBase.h" />
@@ -335,8 +334,6 @@
     <ClInclude Include="log\Configurable.h" />
     <ClInclude Include="log\ConsoleChannel.h" />
     <ClInclude Include="log\FileChannel.h" />
-    <ClInclude Include="log\Formatter.h" />
-    <ClInclude Include="log\LogChannel.h" />
     <ClInclude Include="log\LogFile.h" />
     <ClInclude Include="log\Logger.h" />
     <ClInclude Include="log\LoggingFactory.h" />
