--- a/work/test/test.vcxproj
+++ b/work/test/test.vcxproj
@@ -79,7 +79,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.cpp">
+      <ShowIncludes Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ShowIncludes>
+    </ClCompile>
     <ClCompile Include="nettest.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
