--- a/work/okeyLib/okeyLib.vcxproj.filters
+++ b/work/okeyLib/okeyLib.vcxproj.filters
@@ -67,6 +67,9 @@
     <Filter Include="Crypt">
       <UniqueIdentifier>{7389000e-5c33-43ba-ab6a-2520eca36ded}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DataBase">
+      <UniqueIdentifier>{517c3f00-7bde-4155-aa11-8d88bf90236a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tinyxml\tinyxml.cpp">
@@ -431,6 +434,9 @@
     </ClCompile>
     <ClCompile Include="Crypt\SHA1Engine.cpp">
       <Filter>Crypt</Filter>
+    </ClCompile>
+    <ClCompile Include="DataBase\SqlConnection.cpp">
+      <Filter>DataBase</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1030,6 +1036,12 @@
     </ClInclude>
     <ClInclude Include="Crypt\SHA1Engine.h">
       <Filter>Crypt</Filter>
+    </ClInclude>
+    <ClInclude Include="DataBase\SqlConnection.h">
+      <Filter>DataBase</Filter>
+    </ClInclude>
+    <ClInclude Include="DataBase\SqlQueryResult.h">
+      <Filter>DataBase</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
