--- a/work/okeyLib/okeyLib.vcxproj.filters
+++ b/work/okeyLib/okeyLib.vcxproj.filters
@@ -1043,5 +1043,8 @@
     <ClInclude Include="DataBase\SqlQueryResult.h">
       <Filter>DataBase</Filter>
     </ClInclude>
+    <ClInclude Include="inc\FQueue.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
