--- a/work/AOITest/AOITest.vcxproj.filters
+++ b/work/AOITest/AOITest.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="PropertiesWnd.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Hexagon.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AOITest.cpp">
@@ -162,6 +165,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PropertiesWnd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Hexagon.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
