--- a/work/AOITest/AOITest.vcxproj
+++ b/work/AOITest/AOITest.vcxproj
@@ -160,4 +160,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="AOITest.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
